Removed colorbox plugin from index2.html; Added lightbox2 plugin to index2.html; FIXED: After switching to the lightbox2 plugin, index2.html now shows the captions with center-alignment for each image when the lightbox is displayed. TODO: make index2.html the root page for this project and submit to Treehouse for review.

--- a/css/styles.css
+++ b/css/styles.css
@@ -102,3 +102,13 @@ a {
 #overlay p {
 	color:white;
 }
+
+.lb-data .lb-details {
+	text-align: center;
+	font-size: 1em;
+}
+
+.lb-data .lb-caption {
+	font-size: 1em;
+	text-align: center;
+}
